# imip-framework

./: .gitignore  CITATION.cff  README.md
core/containment/: instance.py
core/gurumatrix/: gurumatrix.py
core/significance/: relations.py
dispatch/: hermeneutics.py
docs/: ARCHITECTURE.md
imip-framework/: pyproject.toml  setup_and_push.sh
research/: PAPER.md
tests/: test_core.py
