[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "imip-framework"
version = "1.0.0"
description = "IMIP - Multiple Integrated Instantiation of Thought"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Guilherme Goncalves Machado", email = "guihermemachado.ceo@hubstry.dev"}]
keywords = ["IMIP", "AGI", "constitutional-alignment", "GuruDev", "IPII"]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "mypy"]
llm = ["anthropic>=0.20"]

[project.urls]
Homepage = "https://hubstry.dev"
Repository = "https://github.com/guilherme-machado-ceo/imip-framework"
Paper = "https://doi.org/10.5281/zenodo.19772798"
